更新了v0.8.0-v1.1正式版内容，大部份进行了重构和优化，汉化率已达到90%。